@@ -4,6 +4,7 @@ HISTORY
   ------------------------------------------------------------------------------
     alpha3:
     - actions to take after processing is done implemented as separate menu
+    - file status was added to reports
     
     alpha2:
     - ability to resize list of volumes was added to graphical interface
